# Organic

./: .env.example  .gitignore  CLAUDE.md  README.md  example.md  langgraph.json  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.agent/: system_prompt.md
.agent/skills/langchain-agent/: SKILL.md
data/: kepp.txt
docs/: CHANGELOG.md  EXAMPLE.md  architecture.md  index.md
src/: main.py
src/agents/brainstorm/: agent.py  system_prompt.md
src/agents/chat/: agent.py  system_prompt.md
src/agents/example/: agent.py  system_prompt.md
src/agents/name/: agent.py  system_prompt.md
src/agents/namesub/: agent.py  system_prompt.md
src/agents/router/: agent.py  system_prompt.md
src/agents/structure/: agent.py  system_prompt.md
src/graph/: edges.py  graph_build.py  graph_chat.py  graph_name.py  pipeline.py
src/llm/: checkpointer.py  config.py  constants.py  get_env.py
src/mvp/: myagno.py  run_agno.py
src/schemas/: models.py  state.py  state_chat.py  state_name.py  state_pipeline.py  state_router.py
src/tools/: writer_filer.py
teste/: test_pipeline.py
tests/agents/: test_brainstorm_agent.py  test_structure_agent.py
tests/tools/: test_writer_filer.py
